<?xml version="1.0" encoding="UTF-8"?>
<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
    <modelVersion>4.0.0</modelVersion>
    <groupId>narchy</groupId>
    <artifactId>narchy</artifactId>
    <version>1.0</version>

    <packaging>pom</packaging>

    <prerequisites>
        <maven>3.5.0</maven>
    </prerequisites>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>


    </properties>


    <build>


        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>2.20</version>
                    <configuration>

                        <trimStackTrace>true</trimStackTrace>

                        <parallel>methods</parallel>
                        <useUnlimitedThreads>true</useUnlimitedThreads>

                        <parallelMavenExecution>true</parallelMavenExecution>

                        <!--<reuseForks>true</reuseForks>-->

                        <forkMode>always</forkMode>
                        <!--<useUnlimitedThreads>true</useUnlimitedThreads>-->
                        <!--<parallelOptimized>true</parallelOptimized>-->
                        <!--<argLine>-Xmx200m</argLine>-->

                        <!--<skipTests>true</skipTests> &lt;!&ndash; WARNING &ndash;&gt;-->


                        <redirectTestOutputToFile>false</redirectTestOutputToFile>
                        <testFailureIgnore>true</testFailureIgnore>
                        <disableXmlReport>true</disableXmlReport>
                        <detail>false</detail>
                    </configuration>
                    <dependencies>
                        <!-- https://mvnrepository.com/artifact/org.junit.platform/junit-platform-surefire-provider -->
                        <dependency>
                            <groupId>org.junit.platform</groupId>
                            <artifactId>junit-platform-surefire-provider</artifactId>
                            <version>1.0.0-M5</version>
                        </dependency>

                        <dependency>
                            <groupId>org.junit.jupiter</groupId>
                            <artifactId>junit-jupiter-engine</artifactId>
                            <version>5.0.0-M5</version>
                        </dependency>
                        <!-- https://mvnrepository.com/artifact/org.junit.vintage/junit-vintage-engine -->
                        <dependency>
                            <groupId>org.junit.vintage</groupId>
                            <artifactId>junit-vintage-engine</artifactId>
                            <version>4.12.0-M5</version>
                        </dependency>

                    </dependencies>
                </plugin>
            </plugins>
        </pluginManagement>
        <plugins>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.6.1</version>
                <configuration>

                    <source>1.9</source>
                    <target>1.9</target>

                    <debug>true</debug>
                    <!--<debuglevel>lines,vars,source</debuglevel>-->

                    <showWarnings>true</showWarnings>
                    <!--<verbose>true</verbose>-->
                    <fork>true</fork>
                    <!--<detail>true</detail>-->

                    <!--<useIncrementalCompilation>false</useIncrementalCompilation>-->
                    <!--&lt;!&ndash;<useIncrementalCompilation>true</useIncrementalCompilation>&ndash;&gt;-->
                    <!--<failOnError>false</failOnError>-->

                    <!--<staleMillis>2</staleMillis>-->


                </configuration>
            </plugin>


            <!--<plugin>-->
            <!--<groupId>org.apache.maven.plugins</groupId>-->
            <!--<artifactId>maven-site-plugin</artifactId>-->
            <!--<version>3.5.1</version>-->
            <!--</plugin>-->


            <!--<plugin>-->
            <!--<groupId>org.apache.maven.plugins</groupId>-->
            <!--<artifactId>maven-jar-plugin</artifactId>-->
            <!--<version>3.0.1</version>-->
            <!--<configuration>-->
            <!--<archive>-->
            <!--<manifest>-->
            <!--<addClasspath>true</addClasspath>-->
            <!--<mainClass>nars.Repl</mainClass>-->
            <!--<classpathPrefix>lib/</classpathPrefix>-->
            <!--<classpathLayoutType>repository</classpathLayoutType>-->
            <!--</manifest>-->
            <!--</archive>-->
            <!--</configuration>-->
            <!--</plugin>-->

            <plugin>
                <groupId>org.openclover</groupId>
                <artifactId>clover-maven-plugin</artifactId>
                <version>4.2.0</version>
            </plugin>

        </plugins>

    </build>

    <reporting>
        <plugins>
            <plugin>
                <groupId>org.openclover</groupId>
                <artifactId>clover-maven-plugin</artifactId>
                <version>4.2.0</version>
                <configuration>

                    <setTestFailureIgnore>true</setTestFailureIgnore>


                    <!--https://confluence.atlassian.com/clover/basic-usage-588579892.html#Basicusage-run_via_pom-->
                </configuration>
            </plugin>
        </plugins>

    </reporting>

    <modules>

        <module>util</module>
        <module>ui</module>
        <module>logic</module>
        <module>gp</module>


        <module>nal</module>
        <module>app</module>
        <module>lab</module>
        <module>web</module>
    </modules>
</project>
